WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172541
System sleeps while playing to wireless target, ending stream.
https://bugs.webkit.org/show_bug.cgi?id=172541
Summary
System sleeps while playing to wireless target, ending stream.
Jer Noble
Reported
2017-05-24 08:30:42 PDT
System sleeps while playing to wireless target, ending stream.
Attachments
Patch
(27.82 KB, patch)
2017-05-24 08:41 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(27.82 KB, patch)
2017-05-24 09:54 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(27.95 KB, patch)
2017-05-24 10:09 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(28.63 KB, patch)
2017-05-24 11:05 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(28.69 KB, patch)
2017-05-24 11:11 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2017-05-24 08:41:37 PDT
Created
attachment 311121
[details]
Patch
Jer Noble
Comment 2
2017-05-24 09:54:38 PDT
Created
attachment 311123
[details]
Patch
Jer Noble
Comment 3
2017-05-24 10:09:07 PDT
Created
attachment 311126
[details]
Patch
Jer Noble
Comment 4
2017-05-24 11:05:53 PDT
Created
attachment 311134
[details]
Patch
Jer Noble
Comment 5
2017-05-24 11:11:59 PDT
Created
attachment 311136
[details]
Patch
Eric Carlson
Comment 6
2017-05-24 14:04:58 PDT
Comment on
attachment 311136
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=311136&action=review
> Source/WebCore/ChangeLog:14 > + one that is playing but not visible, and one that is playing remotely.
Nit: "one that is" => "and one that is"
> Source/WebCore/html/HTMLMediaElement.cpp:6356 > + m_sleepDisabler = SleepDisabler::create("com.apple.WebCore: HTMLMediaElement playback", type);
Nit: it may help debugging later if the type is in the name string.
> Source/WebCore/html/HTMLMediaElement.cpp:6360 > + m_player->setShouldDisableSleep(shouldDisableSleep == SleepType::Display);
Nit: setShouldDisableSleep should probably be renamed to something like setShouldDisableDisplaySleep
Jer Noble
Comment 7
2017-05-25 13:03:31 PDT
(In reply to Eric Carlson from
comment #6
)
> Comment on
attachment 311136
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=311136&action=review
> > > Source/WebCore/ChangeLog:14 > > + one that is playing but not visible, and one that is playing remotely. > > Nit: "one that is" => "and one that is"
?
> > Source/WebCore/html/HTMLMediaElement.cpp:6356 > > + m_sleepDisabler = SleepDisabler::create("com.apple.WebCore: HTMLMediaElement playback", type); > > Nit: it may help debugging later if the type is in the name string.
In `pmset -g assertions` it displays the type immediately before the string passed in here, which is why I didn't add it to the string itself. If we add logging for sleep assertions, we can just add the type to the log string itself.
> > Source/WebCore/html/HTMLMediaElement.cpp:6360 > > + m_player->setShouldDisableSleep(shouldDisableSleep == SleepType::Display); > > Nit: setShouldDisableSleep should probably be renamed to something like > setShouldDisableDisplaySleep
Ok, but I'd prefer to do that in a future patch (it'll touch a lot of files).
WebKit Commit Bot
Comment 8
2017-05-25 14:05:29 PDT
Comment on
attachment 311136
[details]
Patch Clearing flags on attachment: 311136 Committed
r217447
: <
http://trac.webkit.org/changeset/217447
>
WebKit Commit Bot
Comment 9
2017-05-25 14:05:31 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2017-05-30 20:24:01 PDT
<
rdar://problem/32479770
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug